# TranslationService

./: .dockerignore  .env  .gitignore  Dockerfile  README.md  SDL.yaml  pyproject.toml  tatsu-lab-alpaca-af.csv
src/: main.py
src/api/: aws_translate_api.py  azure_translate_api.py  i_translate_api.py  meta_translate_api.py  opus_api.py  opus_translate_api.py  translation_data.py
src/api/builder/: aws_translate_api_builder.py  azure_translate_api_builder.py  meta_translate_api.py  meta_translate_api_builder.py  opus_translate_api.py  opus_translate_api_builder.py
src/api/open_source/: meta_translate_api.py  open_source_translate_api.py  opus_translate_api.py
src/api/result_uploader/: hf_result_uploader_api.py  i_result_uploader.py
src/api/translation/: aws_translate_api.py  azure_translate_api.py  i_translate_api.py  translation_result.py
src/cache/: cache.py
src/client/: aws_translation_client.py  azure_translation_client.py  meta_client.py  opus_client.py
src/condition/: code_condition.py  i_condition.py  min_chars_condition.py  size_condition.py
src/condition/builder/: code_condition_builder.py  min_chars_condition_builder.py
src/data/: dataset_loader.py
src/environment/: docker_environment.py  i_environment.py  local_environment.py
src/factory/: condition_provider.py  environment_provider.py  i_builder.py  i_object_factory.py  llm_provider.py  result_uploader_api_provider.py  router_provider.py  translate_api_provider.py
src/llm/: i_llm.py  ollama_llm.py  openai_llm.py
src/log/: logger.py
src/router/: advanced_router.py  basic_router.py  i_router.py
src/routing_condition/: i_router.py  ollama_router.py  openai_router.py
src/standalone/: TranslateMetaOnly.ipynb  TranslateOpusMTOnly.ipynb
tst/api/: open_source_translate_api_test.py
(+14 files in other folders)
