[tool.poetry]
name = "translationservice"
version = "0.1.0"
description = ""
authors = ["Jonathen Sundy <jonathensundy@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
datasets = "^2.19.2"
azure-ai-translation-text = "^1.0.0"
tqdm = "^4.66.4"
load-dotenv = "^0.1.0"
mock = "^5.1.0"
huggingface-hub = "^0.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
